# ScreenerBot

./: .gitignore  BUILD.md  CONTRIBUTING.md  Cargo.toml  Cross.toml  Info.plist  LICENSE  README.md  build.rs  package-lock.json  package.json  rustfmt.toml  screenerbot.sh
.cargo/: config.linux.toml  config.macos.toml  config.toml  config.windows.toml
crates/debug-tools/: Cargo.toml
electron/: .gitignore  README.md  forge.config.js  package-lock.json  package.json
electron/assets/: README.md
electron/src/: index.html  main.js  preload.js
icons/: icon.icns
icons/macos-tahoe/: Assets.car  assets-manifest.json
icons/screenerbot.icon/: icon.json
src/: arguments.rs  ata_cleanup.rs  config.rs  configs.rs  constants.rs  dashboard.rs  database.rs  decimal_cache.rs  dexscreener.rs  discovery.rs  discovery_manager.rs  entry.rs  entry_new.rs  features.rs  filtering.rs  filtering_old.rs  finalization_guard.rs  global.rs  global_clean.rs  gui.rs  helpers.rs  lib.rs  logger.rs  loss_prevention.rs  macos_window.rs  main.rs  main_gui_function.rs  main_simple.rs  main_simulation.rs  main_swap_demo.rs  monitor.rs  multi_wallet.rs  ohlcv.rs  ohlcv_analysis.rs  paths.rs  performance.rs  persistence.rs  pool_calculator.rs  pool_cleanup.rs  pool_constants.rs  (+93 more)
src/actions/: broadcast.rs  db.rs  mod.rs  state.rs  types.rs
src/ai/: cache.rs  chat_db.rs  chat_engine.rs  db.rs  engine.rs  mod.rs  permissions.rs  scheduled_db.rs  types.rs
src/api/: dexscreener_rate_limiter.rs  mod.rs
src/apis/: README.md  client.rs  manager.rs  mod.rs  stats.rs
src/bin_legacy/: burn_dust_tokens.rs  debug_decoder_validation.rs  debug_entry_single_token.rs  debug_fluxbeam_specific.rs  debug_meteora_damm_specific.rs  debug_meteora_dbc_specific.rs  debug_meteora_dlmm_specific.rs  debug_orca_specific.rs  debug_pool_service_single_token.rs  debug_pumpfun_amm_specific.rs  debug_raydium_clmm_specific.rs  debug_raydium_legacy_amm_specific.rs  debug_unsupported_pools.rs  find_biggest_pools_by_program.rs  main_sell_all_and_reset.rs
src/cache/: config.rs  database.rs  manager.rs  mod.rs  storage.rs
src/config/: README.md  macros.rs  metadata.rs  mod.rs  schemas.rs  utils.rs
src/connectivity/: mod.rs  monitor.rs  service.rs  state.rs  types.rs
src/core/: config.rs  constants.rs  error.rs  mod.rs  rpc.rs  types.rs
src/database/: blacklist.rs  connection.rs  mints.rs  mod.rs  models.rs  pools.rs  prices.rs  stats.rs  tokens.rs
src/debug_bins/: analyze_mismatch_patterns.rs  analyze_transaction_patterns.rs  debug_coingecko.rs  debug_decimals.rs  debug_defillama.rs  debug_dexscreener.rs  debug_events.rs  debug_geckoterminal.rs  debug_jupiter.rs  debug_manual_trading.rs  debug_ohlcv.rs  debug_pool_decoders.rs  debug_pumpfun_pool.rs  debug_pumpfun_structure.rs  debug_rugcheck.rs  debug_strategies.rs  debug_swap_test.rs  debug_tokens.rs  debug_websocket.rs  main_sell_all_and_reset.rs  test_bonding_curve_decoder.rs  test_initialization_flow.rs  test_webserver.rs  trace_filtering.rs  verify_transactions_from_csv.rs
src/discovery/: database.rs  mod.rs
src/errors/: blockchain.rs  mod.rs
src/events/: db.rs  maintenance.rs  mod.rs  types.rs
src/filtering/: engine.rs  mod.rs  store.rs  types.rs
src/learner/: analyzer.rs  database.rs  integration.rs  mod.rs  model.rs  types.rs
src/license/: cache.rs  mod.rs  types.rs
src/logger/: config.rs  core.rs  file.rs  format.rs  levels.rs  mod.rs  special.rs  tags.rs
src/market_data/: cache.rs  dynamic_pricing.rs  gecko_terminal.rs  mod.rs  pool_decoders.rs  price_calculator.rs
src/marketdata/: database.rs  gecko_api.rs  mod.rs
src/nfts/: metadata.rs  mod.rs
src/notifications/: mod.rs  service.rs  telegram.rs  types.rs
src/ohlcvs/: README.md  aggregator.rs  cache.rs  database.rs  fetcher.rs  gaps.rs  manager.rs  mod.rs  monitor.rs  priorities.rs  service.rs  types.rs
src/pairs/: analyzer.rs  client.rs  database.rs  mod.rs  pool_fetcher.rs  types.rs
src/pool/: database.rs  mod.rs  monitor.rs  price_calculator.rs  types.rs
src/pool_price/: cache.rs  calculator.rs  decoder.rs  discovery.rs  mod.rs  mod.rs.backup  types.rs
src/pools/: analyzer.rs  api.rs  blacklist.rs  broadcast.rs  cache.rs  calculator.rs  chain_discovery.rs  constants.rs  cpmm.rs  db.rs  decoder.rs  discovery.rs  failed_cache.rs  fetcher.rs  meteora_dlmm.rs  mod.rs  orca_whirlpool.rs  pumpfun.rs  pumpfun2.rs  raydium_amm.rs  raydium_clmm.rs  raydium_cpmm.rs  raydium_launchpad.rs  service.rs  tokens.rs  types.rs  utils.rs
src/pools_old/: analyzer.rs  constants.rs  discovery.rs  mod.rs  tokens.rs
src/portfolio/: analyzer.rs  display.rs  mod.rs  mod_broken.rs  mod_new.rs  mod_old.rs  mod_simple.rs  tracker.rs
src/positions/: apply.rs  broadcast.rs  db.rs  lib.rs  loss_detection.rs  metrics.rs  mod.rs  operations.rs  price_updater.rs  queue.rs  state.rs  tracking.rs  transitions.rs  types.rs  verifier.rs  worker.rs
src/pricing/: cache.rs  dynamic_pricing.rs  gecko_terminal.rs  mod.rs  pool_decoders.rs  price_calculator.rs
src/rpc/: compat.rs  errors.rs  global.rs  legacy_types.rs  manager.rs  mod.rs  selector.rs  testing.rs  types.rs  utils.rs  websocket.rs
src/rug_detection/: mod.rs  monitor.rs
src/screener/: analysis.rs  filters.rs  mod.rs  sources.rs
src/services/: health.rs  metrics.rs  mod.rs
src/strategies/: db.rs  engine.rs  mod.rs  types.rs
src/strategy/: config.rs  dca.rs  entry.rs  exit.rs  mod.rs  position.rs  price_analysis.rs  pump_analysis.rs
src/swap/: executor.rs  gmgn.rs  jupiter.rs  manager.rs  mod.rs  raydium.rs  routes.rs  tests.rs  traits.rs  types.rs
src/swaps/: config.rs  execution.rs  gmgn.rs  interface.rs  jupiter.rs  jupiter_old.rs  mod.rs  mod_broken.rs  operations.rs  pricing.rs  raydium.rs  raydium_direct.rs  registry.rs  router.rs  tests.rs  transaction.rs  types.rs
src/telegram/: bot.rs  discovery.rs  formatters.rs  keyboards.rs  mod.rs  notifier.rs  pagination.rs  polling.rs  service.rs  session.rs  totp.rs  types.rs
src/tokens/: README.md  api.rs  authority.rs  blacklist.rs  (+46 more)
tests/: price_monitor_test.rs  raydium_decoders.rs
(+725 files in other folders)
