[package]
name = "screenerbot"
version = "0.1.0"
edition = "2021"

# Workspace optimization for faster builds
[workspace]
members = ["."]
resolver = "2"

# Dev profile — fastest possible compile + good debugging
[profile.dev]
opt-level = 0
debug = 0                # no debug info -> much faster compile/link
incremental = true
codegen-units = 256
lto = false
panic = "abort"          # simpler codegen, faster builds
debug-assertions = false  # skip extra checks for speed
overflow-checks = false   # skip integer overflow checks

# Release profile — optimized but still fast to compile
[profile.release]
opt-level = 3         # Full optimizations for runtime speed
lto = "thin"          # Faster LTO than "fat"
codegen-units = 1     # Better runtime perf (slower compile, but still reasonable)
incremental = false   # Avoids some LTO instability
debug = false         # Smaller binary, faster link
panic = "abort"       # Reduces binary size
strip = "debuginfo"   # Strips symbols except needed for backtraces

# Optional: profile for "fast-release" builds (good runtime perf, much faster than full release)
[profile.fast-release]
inherits = "release"
lto = false
codegen-units = 8
opt-level = 2

[lib]
name = "screenerbot"
path = "src/lib.rs"
doctest = false

[[bin]]
name = "screenerbot"
path = "src/main.rs"

[[bin]]
name = "debug_decimals"
path = "src/bin/debug_decimals.rs"
required-features = ["debug-tools"]

[[bin]]
name = "verify_transactions_from_csv"
path = "src/bin/verify_transactions_from_csv.rs"
required-features = ["debug-tools"]

[[bin]]
name = "test_license_verification"
path = "src/bin/test_license_verification.rs"
required-features = ["debug-tools"]

[[bin]]
name = "analyze_mismatch_patterns"
path = "src/bin/analyze_mismatch_patterns.rs"
required-features = ["debug-tools"]

[[bin]]
name = "analyze_transaction_patterns"
path = "src/bin/analyze_transaction_patterns.rs"
required-features = ["debug-tools"]

[[bin]]
name = "debug_coingecko"
path = "src/bin/debug_coingecko.rs"
required-features = ["debug-tools"]

[[bin]]
name = "debug_defillama"
path = "src/bin/debug_defillama.rs"
required-features = ["debug-tools"]

[[bin]]
name = "debug_dexscreener"
path = "src/bin/debug_dexscreener.rs"
required-features = ["debug-tools"]

[[bin]]
name = "debug_events"
path = "src/bin/debug_events.rs"
required-features = ["debug-tools"]

[[bin]]
name = "debug_geckoterminal"
path = "src/bin/debug_geckoterminal.rs"
required-features = ["debug-tools"]

[[bin]]
name = "debug_jupiter"
path = "src/bin/debug_jupiter.rs"
required-features = ["debug-tools"]

[[bin]]
name = "debug_manual_trading"
path = "src/bin/debug_manual_trading.rs"
required-features = ["debug-tools"]

[[bin]]
name = "debug_ohlcv"
path = "src/bin/debug_ohlcv.rs"
required-features = ["debug-tools"]

[[bin]]
name = "debug_pool_decoders"
path = "src/bin/debug_pool_decoders.rs"
required-features = ["debug-tools"]

[[bin]]
name = "debug_positions_semaphore"
path = "src/bin/debug_positions_semaphore.rs"
required-features = ["debug-tools"]

[[bin]]
name = "debug_pumpfun_pool"
path = "src/bin/debug_pumpfun_pool.rs"
required-features = ["debug-tools"]

[[bin]]
name = "debug_pumpfun_structure"
path = "src/bin/debug_pumpfun_structure.rs"
required-features = ["debug-tools"]

[[bin]]
name = "debug_rugcheck"
path = "src/bin/debug_rugcheck.rs"
required-features = ["debug-tools"]

[[bin]]
name = "debug_strategies"
path = "src/bin/debug_strategies.rs"
required-features = ["debug-tools"]

[[bin]]
name = "debug_tokens"
path = "src/bin/debug_tokens.rs"
required-features = ["debug-tools"]

[[bin]]
name = "debug_websocket"
path = "src/bin/debug_websocket.rs"
required-features = ["debug-tools"]

[[bin]]
name = "main_sell_all_and_reset"
path = "src/bin/main_sell_all_and_reset.rs"
required-features = ["debug-tools"]

[[bin]]
name = "test_bonding_curve_decoder"
path = "src/bin/test_bonding_curve_decoder.rs"
required-features = ["debug-tools"]

[[bin]]
name = "test_initialization_flow"
path = "src/bin/test_initialization_flow.rs"
required-features = ["debug-tools"]

[[bin]]
name = "test_webserver"
path = "src/bin/test_webserver.rs"
required-features = ["debug-tools"]

[[bin]]
name = "trace_filtering"
path = "src/bin/trace_filtering.rs"
required-features = ["debug-tools"]

[dependencies]
# Core async runtime with minimal features for faster builds
# Added tracing for tokio-console support
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time", "fs", "net", "tracing"] }
console-subscriber = { version = "0.2", optional = true }
tokio-metrics = "0.3"

# Essential dependencies
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
chrono = { version = "0.4", features = ["serde"] }
once_cell = "1.19"
blake3 = "1.5"
flate2 = { version = "1.0", default-features = false, features = ["rust_backend"] }

# HTTP client and websockets
reqwest = { version = "0.11", features = ["json", "rustls-tls", "blocking"] }
tokio-tungstenite = { version = "0.21", features = ["connect", "rustls-tls-native-roots"] }

# Database with bundled sqlite for faster builds
rusqlite = { version = "0.29", features = ["bundled"] }
r2d2 = "0.8"
r2d2_sqlite = "0.22"

# Crypto / encoding
bs58 = "0.4"
base64 = "0.21"

# CLI and logging - minimal features
clap = { version = "4.0", features = ["derive"] }
colored = "2.0"
log = "0.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# System / utils
rand = "0.8"
bincode = "1.3.3"
thiserror = "1.0"
fslock = "0.2"
uuid = { version = "1.11", features = ["v4", "serde"] }

# CPU profiling
pprof = { version = "0.13", features = ["flamegraph", "criterion"], optional = true }
unicode-width = "0.1"

# Concurrency
dashmap = "5.5"

# Service management dependencies
async-trait = "0.1"

# Solana dependencies - with full features needed for trading
solana-sdk = { version = "2.3.1", features = ["full"] }
solana-client = { version = "2.1.0" }
solana-program = { version = "2.3.0" }
solana-transaction-status = { version = "2.3.3" }
solana-account-decoder = { version = "2.3.1" }

# SPL Token dependencies - minimal features
spl-token-2022 = { version = "8.0.1", default-features = false, features = ["no-entrypoint"] }
spl-token = { version = "8.0.0", default-features = false, features = ["no-entrypoint"] }
spl-associated-token-account = { version = "6.0.0", default-features = false, features = ["no-entrypoint"] }

# Web and networking
futures = "0.3"
futures-util = "0.3"
url = "2.4"
async-stream = "0.3"
tokio-stream = "0.1"

# File and data processing
csv = "1.3.1"
dirs = "6.0.0"

# Terminal and display
tabled = "0.20"
axum = { version = "0.7", features = ["ws", "macros"] }
axum-macros = "0.4"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace", "compression-full"] }
hyper = "1.0"
sysinfo = "0.30"

# GUI - always compiled, use --gui flag at runtime to enable window
tauri = { version = "2.1", features = ["devtools"] }
tauri-plugin-shell = "2.0"
tauri-plugin-global-shortcut = "2.0"

[build-dependencies]
tauri-build = { version = "2.1", features = [] }

# Features — keep placeholders but no dependencies by default
[features]
default = []
debug-tools = []  # Enable all debug/test binaries
web = []
telegram = []
# Profiling features that can be enabled with --features
console = ["console-subscriber"]
flamegraph = ["pprof"]
logging = []
firebase = []
jupiter = []
ui = []
time-zones = []
http-client = []
crypto-extra = []
fast = []
full = []

[dev-dependencies]
tempfile = "3"
